# main-server/api/route/route.go
@@ -16,6 +16,9 @@ func Setup(app *fiber.App, db database.DbAdapter, jwt jwt.Provider, notifs notif
 
 	protectedRouter := app.Group("/api")
 	middleware.InitAuth(protectedRouter, jwt)
+
 	auth.InitRefreshTokens(protectedRouter, jwt, db)
+
 	subscriptions.InitSubscribe(protectedRouter, notifs, db)
+	subscriptions.InitUnsubscribe(protectedRouter, db)
 }
