# main-server/api/route/subscriptions/unsubscribe.go
@@ -4,12 +4,11 @@ import (
 	"github.com/gofiber/fiber/v2"
 	"main-server/api/controller/subscriptions"
 	"main-server/database"
-	"main-server/notifications"
 )
 
-// InitSubscribe
-// @Summary		Subscribe to user
-// @Description	Start receiving notifications of user's actions
+// InitUnsubscribe
+// @Summary		Unsubscribe from user
+// @Description	Stop receiving notifications of user's actions
 // @Tags			subscriptions
 // @Produce		json
 // @Security		ApiKeyAuth
@@ -17,8 +16,8 @@ import (
 // @Success		200		{object}	domain.SubscriptionResponse
 // @Failure		400,401	{object}	domain.ErrorResponse
 // @Failure		500		{object}	domain.ErrorResponse
-// @Router			/api/subscribe [post]
-func InitSubscribe(group fiber.Router, notifs notifications.Manager, db database.DbAdapter) {
-	c := subscriptions.NewSubscribe(notifs, db)
+// @Router			/api/unsubscribe [post]
+func InitUnsubscribe(group fiber.Router, db database.DbAdapter) {
+	c := subscriptions.NewUnsubscribe(db)
 	group.Post("/subscribe", c.Handle)
 }
