# main-server/domain/subscriptionsProtocol.go
@@ -1,0 +1,9 @@
+package domain
+
+type (
+	SubscriptionRequest struct {
+		UserId UserId
+	}
+	SubscriptionResponse struct {
+	}
+)
